TEST_PROGRAMS/VALID/09/switch_stmt.go
// Various allowed switch statements
package swith

func main() {
	switch i++; a {
	}

	switch exp {
	case condition:

	case otherCondition:
	default:
		break;
	}

	// single line
	switch a { case condition: }
}
