TEST_PROGRAMS/INVALID/03/invalid_switch10.go
package main
func f() {
	switch tag {
	default:
		s3()
	case 0, 1, 2, 3:
		s1();
	}

	switch _ { // underscore not valid
		case 1: break; 

	default:
		return x
	}
	switch {
	
	}
}
